# chat-ui

./: .codespellignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  amplify.yml  deploy.sh  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tasks.md  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
cdk/: package.json
infra/: cdk.context.json  cdk.json  deploy.py  pyproject.toml  requirements.txt
infra/marky_chat_ui_infra/: __init__.py  app.py  stack.py
scripts/: init-msw.js
src/: main.tsx
src/components/icons/: marky.tsx
src/components/thread/: index.tsx
src/components/thread/agent-inbox/: utils.ts
src/components/thread/agent-inbox/hooks/: use-interrupted-actions.tsx
src/components/thread/history/: index.tsx
src/components/thread/messages/: agent-response.tsx  human.tsx  message.tsx
src/components/ui/: button.tsx
src/components/ui/button/: variants.ts
src/mocks/: browser.ts  handlers.test.ts  handlers.ts  setup.ts
src/providers/: Stream.tsx  Thread.tsx
src/providers/Thread/: context.tsx  hooks.tsx  index.tsx  provider.tsx  utils.ts
